# ai-assistant-v4

./: .env.example  .gitignore  ECHO_PREVENTION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  assistant.py  demo_tts_playback.py  docker-compose.yml  echo_filter.py  echo_prevention_flow.txt  instructions.md  pyproject.toml  test_echo_filter.py  test_memory.py  test_ollama_client.py  test_perception.py  test_stt_real.py  test_tts_voices.py  test_vision_real.py  tts_test_README.md
.github/workflows/: heartbeat-deploy.yml  memory-deploy.yml
docs/: sensory-processors.md  test-stt-real.md  tts-implementation-summary.md  tts-kokoro.md
examples/: basic_perception.py  dynamic_sources.py  multi_input.py  stt_example.py  tts_example.py
mqtt/config/: mosquitto.conf
services/: __init__.py
services/assistant/: __init__.py  __main__.py  service.py
services/audio_collector/: __init__.py  __main__.py  service.py
services/extraction/: __init__.py  __main__.py  service.py
services/heartbeat/: Dockerfile  __init__.py  __main__.py  service.py
services/memory/: Dockerfile  __init__.py  __main__.py  api.py  service.py
services/speech/: __init__.py  __main__.py  service.py
services/text_interaction/: __init__.py  __main__.py  service.py
services/transcription/: __init__.py  __main__.py  service.py
src/ai_assistant/: __init__.py
src/ai_assistant/actions/: __init__.py
src/ai_assistant/actions/tts/: __init__.py  kokoro_tts.py
src/ai_assistant/memory/: __init__.py  config.py  exceptions.py  memory.py  models.py
src/ai_assistant/memory/clients/: __init__.py  embeddings.py  postgres.py  qdrant.py
src/ai_assistant/memory/stores/: __init__.py  conversation_store.py  event_log.py  fact_store.py
src/ai_assistant/perception/: __init__.py
src/ai_assistant/perception/core/: __init__.py  config.py  system.py
src/ai_assistant/perception/input_sources/: __init__.py  audio.py  base.py  camera.py  text.py
src/ai_assistant/perception/processors/: __init__.py  audio_utils.py  base.py  manager.py  stt_processor.py  vision_processor.py
src/ai_assistant/shared/events/: __init__.py  event.py  event_bus.py  priority_queue.py  specialized.py
src/ai_assistant/shared/interfaces/: __init__.py  event.py  event_bus.py  input_source.py  lifecycle.py  processor.py  pubsub.py
src/ai_assistant/shared/logging/: __init__.py  config.py  context.py  formatters.py  levels.py
src/ai_assistant/shared/messages/: __init__.py  assistant.py  audio.py  base.py  memory.py  session.py  speech.py  transcription.py
src/ai_assistant/shared/mqtt/: __init__.py  client.py  config.py  event_bus.py  serialization.py  topics.py
src/ai_assistant/shared/ollama/: __init__.py  client.py
src/ai_assistant/shared/services/: __init__.py  base.py
src/ai_assistant/shared/threading/: __init__.py  manager.py  thread_info.py  thread_pool.py
tasks/sensory-processor-implementation/: seq-01-processor-base-interface.md  seq-02-processor-base-implementation.md  seq-03-processor-manager.md  seq-04-audio-transcription-event.md  seq-05-audio-utilities.md  seq-06-stt-processor-implementation.md  seq-07-update-dependencies.md  seq-08-perception-system-integration.md
